--- a/doc/latex2/theory.tex
+++ b/doc/latex2/theory.tex
@@ -81,7 +81,7 @@ To produce a random walk one must have random numbers.
 The random numbers in this thesis are produced by a five seeded xor-shift algorithm copied from George Marsaglia \cite{marsaglia2003xorshift}. 
 This generator is chosen because of its very large period ($\sim10^{48}$) compared to the computational cost.
 
-\section{Backward Euler schemes in 2 or more spatial dimensions}
+\section{Backward Euler schemes in 2 or more spatial dimensions}\label{theory:section:BE2D}
 
 The reader is assumed to know the basics of solving partial differential equations (PDEs\nomenclature{PDE}{Partial Differential Equation}) by finite difference methods, but for the sake of clarity the two schemes used in this thesis are written out. 
 \begin{equation}\label{theory_theta_rule}
